Add finding 1), 2) and dividing into new lines.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 */.idea/*
 *.iml
 *.xml
-
+*/out/*
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
